#9 前処理にpandasの読み込み方を追加

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -27,7 +27,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "R1 = pd.read_csv('R1.txt', names=['time', 'ch1', 'ch2', 'ch3', 'ch4'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R1['time'][0]"
+   ]
   }
  ],
  "metadata": {
