--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -28,18 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#コロンを除去\n",
-    "array=[]\n",
-    "array_times=[]\n",
-    "for i in range(len(times)):\n",
-    "    array.append(times[i].split(':'))\n",
-    "#秒に変換\n",
-    "for x in range(len(array)):\n",
-    "        array_times.append((float(array[x][0])*3600+float(array[x][1])*60+float(array[x][2])))\n",
-    "array_times[18]=225.33\n",
-    "array_times[30]=165.42\n",
-    "array_times[42]=105.54\n",
-    "array_times"
+    "times[0]"
    ]
   },
   {
@@ -48,7 +37,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#脳波のデータ\n",
+    "array = times[0].split(':')#コロンを除去"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float(array[0]) * 3600 + float(array[1])*60+float(array[2])#時間表示を秒に変換する式,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "R1 = pd.read_csv('R1.txt', names=['time', 'ch1', 'ch2', 'ch3', 'ch4'])\n",
     "R1['move'] = 0"
    ]
@@ -86,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = float(array1[0]) * 3600 + float(array1[1]) * 60 + float(array1[2])\n",
+    "t = float(array[0]) * 3600 + float(array[1]) * 60 + float(array[2])\n",
     "abs(R1['time'] - t)"
    ]
   },
@@ -107,13 +113,6 @@
    "source": [
     "print(type(times[0]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
