#9手を叩いた時点と通信での時間を対応させました。

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -28,6 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ストップウォッチのデータ\n",
     "#コロンを除去\n",
     "array=[]\n",
     "array_times=[]\n",
@@ -59,53 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for time in array_times:\n",
+    "    i=abs(R1['time'] - time).idxmin()#array_timesとtimeでの時間が同じ点を取る\n",
+    "    R1.at[R1.index[i],'move']=1\n",
     "R1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R1['time'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(R1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = float(array1[0]) * 3600 + float(array1[1]) * 60 + float(array1[2])\n",
-    "abs(R1['time'] - t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abs(R1['time'] - t)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(type(times[0]))"
    ]
   },
   {
