--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -20,7 +20,7 @@
     "with open('R1_time.txt') as f:\n",
     "    for line in f:\n",
     "        times.append(line.split('\\t')[2].rstrip('\\n'))\n",
-    "times"
+    "#times"
    ]
   },
   {
@@ -118,40 +118,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R1[(R1['time'] > 30) & (R1['time'] < 60)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "t=np.zeros((7,1))\n",
     "print(t)\n",
     "t1=[]\n",
-    "for i in t:\n",
-    "    t1[i] = np.array(A['ch1'])[:(i-6)]\n",
-    "    np.append(t,t[i])\n",
+    "for i in range(len(t)):\n",
+    "    for j in range(len(t)):\n",
+    "        t1[i][j] = np.array(A['ch1'])[:(i-6)]\n",
+    "        np.append(t,t[i][j])\n",
+    "    \n",
     "\n"
    ]
   },
