--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -118,16 +118,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "t=np.zeros((7,1))\n",
-    "print(t)\n",
-    "t1=[]\n",
-    "for i in range(len(t)):\n",
-    "    for j in range(len(t)):\n",
-    "        t1[i][j] = np.array(A['ch1'])[:(i-6)]\n",
-    "        np.append(t,t[i][j])\n",
+    "n = len(A['ch1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.array(A['ch1'])[:n-6]\n",
+    "for i in range(1,7):\n",
+    "    t1 = np.array(A['ch1'])[i:n-6+i]\n",
+    "    t = np.vstack((t,t1))\n",
     "    \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "t = np.array(A['ch1'])[i:(i-6)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 1\n",
+    "t = np.vstack((t,np.array(A['ch1'])[i:(i-6)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t"
    ]
   },
   {
@@ -351,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
