--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -16,90 +16,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "times = []\n",
-    "with open('R1_time.txt') as f:\n",
-    "    for line in f:\n",
-    "        times.append(line.split('\\t')[2].rstrip('\\n'))\n",
-    "#times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ストップウォッチのデータ\n",
-    "#コロンを除去\n",
-    "array=[]\n",
-    "array_times=[]\n",
-    "for i in range(len(times)):\n",
-    "    array.append(times[i].split(':'))\n",
-    "#秒に変換\n",
-    "for x in range(len(array)):\n",
-    "        array_times.append((float(array[x][0])*3600+float(array[x][1])*60+float(array[x][2])))\n",
-    "array_times[18]=225.33\n",
-    "array_times[30]=165.42\n",
-    "array_times[42]=105.54\n",
-    "array_times"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#脳波のデータ\n",
-    "R1 = pd.read_csv('R1.txt', names=['time', 'ch1', 'ch2', 'ch3', 'ch4'])\n",
-    "R1['move'] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for time in array_times:\n",
-    "    i=abs(R1['time'] - time).idxmin()#array_timesとtimeでの時間が同じ点を取る\n",
-    "    if file[0]=='R':\n",
-    "        R1.at[R1.index[i],'move']=1\n",
-    "    else:\n",
-    "        R1.at[R1.index[i],'move']=-1\n",
-    "R1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocessing(file):\n",
-    "    times = []\n",
-    "    array=[]\n",
-    "    array_times=[]\n",
-    "    with open(file[:2] + '_time.txt') as f:\n",
+    "def preprocessing(fname):\n",
+    "    list_time = [] # time when fingers moved (str)\n",
+    "    with open(fname + '_time.txt') as f:\n",
     "        for line in f:\n",
-    "            times.append(line.split('\\t')[2].rstrip('\\n'))\n",
-    "    \n",
-    "        for i in range(len(times)):\n",
-    "            array.append(times[i].split(':'))\n",
-    "    #秒に変換\n",
-    "        for x in range(len(array)):\n",
-    "            array_times.append((float(array[x][0])*3600+float(array[x][1])*60+float(array[x][2])))\n",
-    "        \n",
-    "        R1 = pd.read_csv(file, names=['time', 'ch1', 'ch2', 'ch3', 'ch4'])\n",
-    "        R1['move'] = 0\n",
-    "        for time in array_times:\n",
-    "            i=abs(R1['time'] - time).idxmin()#array_timesとtimeでの時間が同じ点を取る\n",
-    "            if file[0]=='R':\n",
-    "                R1.at[R1.index[i],'move']=1\n",
-    "            else:\n",
-    "                R1.at[R1.index[i],'move']=-1\n",
-    "                \n",
-    "    return  R1[(R1['time'] > 30) & (R1['time'] < R1['time'].max()-20)]"
+    "            list_time.append(line.split('\\t')[2].rstrip('\\n'))\n",
+    "    list_seconds = [] # time when finger moved (float)\n",
+    "    for time in list_time:\n",
+    "        l = time.split(':')\n",
+    "        list_seconds.append(float(l[0]) * 3600 + float(l[1]) * 60 + float(l[2]))\n",
+    "    data = pd.read_csv(fname + '.txt', names=['time', 'ch1', 'ch2', 'ch3', 'ch4']) # wave data with time\n",
+    "    data['move'] = 0 # movement of finger\n",
+    "    for time in list_seconds: #match wave and the time fingers moved\n",
+    "        i = abs(data['time'] - time).idxmin()\n",
+    "        if fname[0] == 'R':\n",
+    "            data.at[data.index[i], 'move'] = 1\n",
+    "        else:\n",
+    "            data.at[data.index[i], 'move'] = -1\n",
+    "    data = data[(data['time'] > 30) & (data['time'] < data['time'].max() - 20)]\n",
+    "    data['inner'] = data['ch3'] - data['ch2']\n",
+    "    data['outer'] = data['ch4'] - data['ch1']\n",
+    "    data = data.drop(['ch1', 'ch2', 'ch3', 'ch4'], axis=1).reset_index(drop=True)\n",
+    "    n = len(data)\n",
+    "    for i in range(n - 1):\n",
+    "        if data.at[i + 1, 'time'] - data.at[i, 'time'] > 0.1:\n",
+    "            data = data.append((data.loc[i] + data.loc[i + 1]) / 2, ignore_index=True)\n",
+    "    data.loc[n:, 'move'] = 0\n",
+    "    data.sort_values(by='time', ascending=False)\n",
+    "    diff = pd.DataFrame(index=[], columns=['inner', 'outer'])\n",
+    "    for i in range(len(data) - 1):\n",
+    "        diff.loc[i] = data.loc[i + 1, ['inner', 'outer']] - data.loc[i, ['inner', 'outer']]\n",
+    "    return diff"
    ]
   },
   {
@@ -108,8 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = preprocessing('R1.txt')\n",
-    "#R1.iloc[350:400]"
+    "data = preprocessing('R1')"
    ]
   },
   {
@@ -118,8 +64,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = len(A['ch1'])"
+    "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -394,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
