#9 脳波のデータをCSVで出力できるようになった

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -46,7 +46,21 @@
     "    diff = pd.DataFrame(index=[], columns=['inner', 'outer'])\n",
     "    for i in range(len(data) - 1):\n",
     "        diff.loc[i] = data.loc[i + 1, ['inner', 'outer']] - data.loc[i, ['inner', 'outer']]\n",
-    "    return diff"
+    "    diff['move'] = data.loc[:len(data) - 1, 'move']\n",
+    "    diff1= diff.loc[0:len(diff)-4].reset_index(drop=True)#divide into five\n",
+    "    diff1= diff1.rename(columns={'inner': 'inner1', 'outer': 'outer1'}).drop('move',axis=1)\n",
+    "    diff2= diff.loc[1:len(diff)-3].reset_index(drop=True)\n",
+    "    diff2 = diff2.rename(columns={'inner': 'inner2', 'outer': 'outer2'}).drop('move',axis=1)\n",
+    "    diff3 = diff.loc[2:len(diff)-2].reset_index(drop=True)\n",
+    "    diff3 = diff3.rename(columns={'inner': 'inner3', 'outer': 'outer3'})\n",
+    "    diff4 = diff.loc[3:len(diff)-1].reset_index(drop=True)\n",
+    "    diff4 = diff4.rename(columns={'inner': 'inner4', 'outer': 'outer4'}).drop('move',axis=1)\n",
+    "    diff5 = diff.loc[4:len(diff)].reset_index(drop=True)\n",
+    "    diff5 = diff5.rename(columns={'inner': 'inner5', 'outer': 'outer5'}).drop('move',axis=1)\n",
+    "    #merge\n",
+    "    diff_all = pd.concat([diff1, diff2,diff3,diff4,diff5], axis=1)\n",
+    "    #export as CSV file\n",
+    "    diff_all.to_csv (fname+'.csv')"
    ]
   },
   {
@@ -55,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = preprocessing('R1')"
+    "preprocessing('R1')"
    ]
   },
   {
@@ -64,157 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data"
+    "preprocessing('L1')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = np.array(A['ch1'])[:n-6]\n",
-    "for i in range(1,7):\n",
-    "    t1 = np.array(A['ch1'])[i:n-6+i]\n",
-    "    t = np.vstack((t,t1))\n",
-    "    \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 0\n",
-    "t = np.array(A['ch1'])[i:(i-6)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 1\n",
-    "t = np.vstack((t,np.array(A['ch1'])[i:(i-6)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array(A['ch1'])[:-6].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_0 = np.array(A['ch1'])[:-6]\n",
-    "t_1 = np.array(A['ch1'])[1:-5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = len(t_0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B = pd.DataFrame(t_0, t_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array(A['time'])[3:-3].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -368,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
