--- a/train.ipynb
+++ b/train.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "estimator = SVC(C=1, kernel='rbf', gamma=0.01)\n",
     "classifier = OneVsRestClassifier(estimator)\n",
-    "classifier.fit(train_x, train_y)"
+    "classifier.fit(X_std, y)"
    ]
   },
   {
@@ -70,8 +70,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(classifier, classifier.sav)"
+    "joblib.dump(classifier, 'classifier.sav')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -90,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
